--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit==1.31.0
-pandas==2.1.0
-openpyxl==3.1.2
-fpdf2==2.7.6
-python-docx==1.0.1
-python-dotenv==1.0.0
-requests==2.31.0
-
+streamlit>=1.25.0
+pandas>=1.5.0
+openpyxl>=3.0.0
+fpdf2>=2.7.0
+python-docx>=0.8.10
+python-dotenv>=0.15.0
+requests>=2.25.0
